package LEBOCQTitouan.edu.model.entities;

import LEBOCQTitouan.edu.model.entities.planet.Cell;

public class Waterpipe {
    private final Cell cell;

    public Waterpipe(Cell cell) {
        this.cell = cell;
    }
}
